Milestone in Introduction redaction, until eukaryal selenoproteome

--- a/Master Thesis.scriv/QuickLook/Preview.html
+++ b/Master Thesis.scriv/QuickLook/Preview.html
@@ -19,11 +19,20 @@ p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Courier; min-height: 14.0px}
 <p class="p1"><b>• Introduction</b></p>
 <p class="p3"><br></p>
 <p class="p3"><br></p>
-<p class="p1"><b>• Biological Context of Selenoproteins</b></p>
-<p class="p3"><br></p>
-<p class="p3"><br></p>
 <p class="p1"><b>• Generalities on Selenocysteine and it's incorporation</b></p>
-<p class="p2">Selenium has been considered for a long time as a toxic element for organisms. Selenium is incorporated in particular proteins called selenoproteins, in the form of selenocysteine ( Sec, U ). As its name suggests Sec is basically a cysteine ( Cys ) in which sulphur is replaced by selenium. This confers to selenocysteine a higher reactivity ( pKaSec = 5.2 ; pKaCys = 8.3 ) {Fomenko et al., 2007, Science, 315, 387-9}. Sec is incorporated in a co-translational manner, at the position of specific UGA...</p>
+<p class="p2">Selenium has been considered for a long time as a toxic element for organisms. Selenium is incorporated in particular proteins called selenoproteins, in the form of selenocysteine (Sec, U). As its name suggests Sec is basically a cysteine (Cys) in which sulphur is replaced by selenium. This confers to selenocysteine a higher reactivity (pKaSec = 5.2 ; pKaCys = 8.3) {Fomenko et al., 2007, Science, 315, 387-9}. Sec is incorporated in a co-translational manner, at the position of specific UGA codon...</p>
+<p class="p3"><br></p>
+<p class="p1"><b>• Selenoproteomes</b></p>
+<p class="p2">Selenoproteins exist in all domains of life (prokaryotes, archaea and eukaryotes) However, it seems that higher plants and fungi have no selenoproteins. Yet, several photosynthetic microorganisms possess selenoproteins (about 10 have been found in the green algae Chlamydomonas reinhardtii {Novoselov et al., 2002, EMBO J, 21, 3681}, mainly peroxydases). Given the high nucleophilicity of Sec compared to Cys, many selenoproteins are in fact redox proteins, in which Sec is used to coordinate a redox...</p>
+<p class="p3"><br></p>
+<p class="p1"><b>• Bacterial Selenoproteome</b></p>
+<p class="p2">Bacterial selenoproteins are mainly redox enzymes involved in energy-yielding pathways, since these processes heavily rely on oxido-reduction reactions {Kryukov and Gladyshev, 2004, EMBO Rep, 5, 538-43; Stock and Rother, 2009, Biochim Biophys Acta, 1790, 1520-32}. Yet, selenoproteins are also found in other processes, such as antioxidant defense, redox homeostasis, or Sec biosynthesis {Kryukov and Gladyshev, 2004, EMBO Rep, 5, 538-43}. It is worth pointing out that SelD homologues containing Sec...</p>
+<p class="p3"><br></p>
+<p class="p1"><b>• Archaeal Selenoproteome</b></p>
+<p class="p2">In archaea, selenoproteins seem to be a lot less common. It is quite striking that selenoproteins seem restricted to two genera ( based on the data gathered from 56 sequenced genomes, representing 43 genera ) {Stock and Rother, 2009, Biochim Biophys Acta, 1790, 1520-32}, Methanococcus and Methanopyrus. As their name suggests, these are methanogenic organisms. It is also intriguing that the selenoproteins of these species, with the exception of SPS, are all involved in hydrogenotrophic methanogen...</p>
+<p class="p3"><br></p>
+<p class="p1"><b>• Eukaryal Selenoproteome</b></p>
+<p class="p2">As in archaea, the SECIS element is found in the 3'UTR of the RNA. Being in an untranslated region, it is not under encoding constraints. Yet, it has been shown that factors interacting with the SECIS recognize non-Watson-Crick base pair associations in the stem {Walczak et al., 1998, RNA, 4, 74-84}. The apparent importance of this primary structure actually drives the secondary structure (Figure &lt;$n:figure:&gt;). Indeed, thanks to those non-canonical base pair associations, the stem of the SECIS a...</p>
 <p class="p3"><br></p>
 <p class="p1"><b>• Material and Methods</b></p>
 <p class="p3"><br></p>
